20 Jun 2001 Remove subchannel enabled check from console - Jan Jaeger
19 Jun 2001 Correct check for MVCL in different spaces - Jan Jaeger
19 Jun 2001 Prevent msg HHC611I during machine check - Jan Jaeger
19 Jun 2001 Enhance MVCL cc3 diagostics - Jan Jaeger
18 Jun 2001 Add missing obtain_lock(devlock) to halt function - Fish
18 Jun 2001 Reset channel path function - Jan Jaeger
17 Jun 2001 Address limit checking - Jan Jaeger
16 Jun 2001 Correctons to LPGFR/LNGFR/LCGFR - Jan Jaeger
16 Jun 2001 Fix index-symbol translation - Bernard van der Helm
16 Jun 2001 TLB implementation for z/Architecture - Jan Jaeger
15 Jun 2001 Fix interrupt key processing - Jan Jaeger
13 Jun 2001 Zero highbyte in 24 bit branch trace entry - Paul Leisy
13 Jun 2001 Correct attention processing on suspended devices - Jan Jaeger
13 Jun 2001 Clear DPS arrays during I/O reset - Jan Jaeger
13 Jun 2001 Fix false protection indication on MVPG - Paul Leisy
11 Jun 2001 Initialize conditions & locks earlier in init routine,
            including initializing cachelock (thanks Fish) - Greg Smith
11 Jun 2001 Correct excarid in ESAME mode - Jan Jaeger
10 Jun 2001 Correct tea on MVPG protection exception - Paul Leisy
10 Jun 2001 Correct halt subchannel function - Jan Jaeger
10 Jun 2001 Correct set pathgroup id ccw - Jan Jaeger
10 Jun 2001 Correct clear subchannel function - Jan Jaeger
09 Jun 2001 Fix CUTFU/CUUTF with zero op2 length - Paul Leisy
09 Jun 2001 Fix STSI condition code - Paul Leisy
09 Jun 2001 Add t+ckd/t-ckd ckd keytrace command - Valery Pogonchenko
03 Jun 2001 Fix TRAP save area access - Paul Leisy
03 Jun 2001 Fix priority of interruptions in stacking PC - Jan Jaeger
03 Jun 2001 Fix priority of interruptions in BAKR - Paul Leisy
03 Jun 2001 Fix typo in setting amode in BSA - Paul Leisy
02 Jun 2001 Moved IEEE option from featall.h to makefile.w32 - Jan Jaeger
02 Jun 2001 Correct tea on asx translation exception in PC - Paul Leisy
02 Jun 2001 Fix update of GR5 in UPT - Paul Leisy